--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -25,7 +25,22 @@ spring:
     hikari:
       maximum-pool-size: 10 # 最大连接池数
       max-lifetime: 1770000
-
+  redis:
+    database: 5
+    host: 127.0.0.1
+    port: 6379
+#    password: M9Ncehx92#$Redis
+    connect-timeout: 5000
+    jedis:
+      pool:
+        # 连接池中的最大空闲连接，默认值也是8。
+        max-idle: 500
+        # 连接池中的最小空闲连接，默认值也是0。
+        min-idle: 50
+        # 如果赋值为-1，则表示不限制；如果pool已经分配了maxActive个jedis实例，则此时pool的状态为exhausted(耗尽)
+        max-active: 1000
+        # 等待可用连接的最大时间，单位毫秒，默认值为-1，表示永不超时。如果超过等待时间，则直接抛出JedisConnectionException
+        max-wait: 2000
 
 #数据库地址
 datasource:
